--- a/css/style2.css
+++ b/css/style2.css
@@ -93,6 +93,13 @@
 .alumni-count {
     text-align: center; /* Center align the content */
 }
+.graph-box {
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
 
 .circle {
     width: 200px;
